[tool.poetry]
name = "commanger"
version = "0.1.3"
description = "A easy to use, extremely configurable shell/terminal command manager for python."
authors = ["ThatRandomPerson"]
readme = "README.md"
license = "MIT"
homepage = "https://pypi.org/project/commanger/"
documentation = "https://python-commanger-docs.readthedocs.io/en/latest/"
repository = "https://github.com/thatrandomperson5/commanger-docs"
[tool.poetry.dependencies]
python = "^3.8"
pyparsing = "^3.0.9"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
